# jepa-llm

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
src/jepa_llm/: __init__.py  cli.py  config.py  dataset.py  messages.py  model_setup.py  text_cleanup.py  utils.py
src/jepa_llm/callbacks/: profiler_flop_callback.py
src/jepa_llm/trainers/: representation_trainer.py
