[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jepa-llm"
version = "0.1.0"
description = "Fine-tuning utilities for JEPA-style language models"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "JEPA Contributors" }]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "pyyaml",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
]

[project.scripts]
jepa-llm = "jepa_llm.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
